crates/nm-collect-ubiquiti/tests/snapshots/parsers__lbe-5ac-gen2-wa-8.7.22_board.snap
---
source: crates/nm-collect-ubiquiti/tests/parsers.rs
assertion_line: 77
expression: "parse::board_info::parse(&read(\"board-info.txt\")).expect(concat!\n(\"board\", \" must parse\"))"
---
{
  "sysid": "0xe7f9",
  "name": "LiteBeam 5AC",
  "shortname": "L5C",
  "hwaddr": "020000000001",
  "subtype": null
}
