crates/nm-collect-ubiquiti/tests/snapshots/parsers__lbe-5ac-gen2-wa-8.7.22_counters.snap
---
source: crates/nm-collect-ubiquiti/tests/parsers.rs
assertion_line: 114
expression: "parse::proc_net_dev::parse(&read(\"proc-net-dev.txt\")).expect(concat!\n(\"counters\", \" must parse\"))"
---
[
  {
    "name": "lo",
    "mac": null,
    "description": null,
    "admin_up": null,
    "oper_up": null,
    "speed_mbps": null,
    "duplex": null,
    "counters": {
      "rx_bytes": 8098,
      "tx_bytes": 8098,
      "rx_packets": 97,
      "tx_packets": 97,
      "rx_errors": 0,
      "tx_errors": 0,
      "rx_dropped": 0,
      "tx_dropped": 0
    },
    "addresses": [],
    "role": null,
    "role_confidence": null,
    "firewall_in": null,
    "firewall_out": null,
    "firewall_local": null
  },
  {
    "name": "eth0",
    "mac": null,
    "description": null,
    "admin_up": null,
    "oper_up": null,
    "speed_mbps": null,
    "duplex": null,
    "counters": {
      "rx_bytes": 1359564715,
      "tx_bytes": 3406726714,
      "rx_packets": 7378806,
      "tx_packets": 24063259,
      "rx_errors": 0,
      "tx_errors": 0,
      "rx_dropped": 0,
      "tx_dropped": 0
    },
    "addresses": [],
    "role": null,
    "role_confidence": null,
    "firewall_in": null,
    "firewall_out": null,
    "firewall_local": null
  },
  {
    "name": "gre0",
    "mac": null,
    "description": null,
    "admin_up": null,
    "oper_up": null,
    "speed_mbps": null,
    "duplex": null,
    "counters": {
      "rx_bytes": 0,
      "tx_bytes": 0,
      "rx_packets": 0,
      "tx_packets": 0,
      "rx_errors": 0,
      "tx_errors": 0,
      "rx_dropped": 0,
      "tx_dropped": 0
    },
    "addresses": [],
    "role": null,
    "role_confidence": null,
    "firewall_in": null,
    "firewall_out": null,
    "firewall_local": null
  },
  {
    "name": "wifi1",
    "mac": null,
    "description": null,
    "admin_up": null,
    "oper_up": null,
    "speed_mbps": null,
    "duplex": null,
    "counters": {
      "rx_bytes": 0,
      "tx_bytes": 0,
      "rx_packets": 0,
      "tx_packets": 0,
      "rx_errors": 0,
      "tx_errors": 0,
      "rx_dropped": 0,
      "tx_dropped": 0
    },
    "addresses": [],
    "role": null,
    "role_confidence": null,
    "firewall_in": null,
    "firewall_out": null,
    "firewall_local": null
  },
  {
    "name": "teql0",
    "mac": null,
    "description": null,
    "admin_up": null,
    "oper_up": null,
    "speed_mbps": null,
    "duplex": null,
    "counters": {
      "rx_bytes": 0,
      "tx_bytes": 0,
      "rx_packets": 0,
      "tx_packets": 0,
      "rx_errors": 0,
      "tx_errors": 0,
      "rx_dropped": 0,
      "tx_dropped": 0
    },
    "addresses": [],
    "role": null,
    "role_confidence": null,
    "firewall_in": null,
    "firewall_out": null,
    "firewall_local": null
  },
  {
    "name": "wifi0",
    "mac": null,
    "description": null,
    "admin_up": null,
    "oper_up": null,
    "speed_mbps": null,
    "duplex": null,
    "counters": {
      "rx_bytes": 0,
      "tx_bytes": 0,
      "rx_packets": 91328163,
      "tx_packets": 16013807,
      "rx_errors": 0,
      "tx_errors": 0,
      "rx_dropped": 3918740,
      "tx_dropped": 1423
    },
    "addresses": [],
    "role": null,
    "role_confidence": null,
    "firewall_in": null,
    "firewall_out": null,
    "firewall_local": null
  },
  {
    "name": "ath0",
    "mac": null,
    "description": null,
    "admin_up": null,
    "oper_up": null,
    "speed_mbps": null,
    "duplex": null,
    "counters": {
      "rx_bytes": 504458341,
      "tx_bytes": 1771610118,
      "rx_packets": 25287268,
      "tx_packets": 7478887,
      "rx_errors": 0,
      "tx_errors": 0,
      "rx_dropped": 0,
      "tx_dropped": 9
    },
    "addresses": [],
    "role": null,
    "role_confidence": null,
    "firewall_in": null,
    "firewall_out": null,
    "firewall_local": null
  },
  {
    "name": "br0",
    "mac": null,
    "description": null,
    "admin_up": null,
    "oper_up": null,
    "speed_mbps": null,
    "duplex": null,
    "counters": {
      "rx_bytes": 3990796770,
      "tx_bytes": 1529221381,
      "rx_packets": 25287172,
      "tx_packets": 7478991,
      "rx_errors": 0,
      "tx_errors": 0,
      "rx_dropped": 0,
      "tx_dropped": 0
    },
    "addresses": [],
    "role": null,
    "role_confidence": null,
    "firewall_in": null,
    "firewall_out": null,
    "firewall_local": null
  },
  {
    "name": "airview1",
    "mac": null,
    "description": null,
    "admin_up": null,
    "oper_up": null,
    "speed_mbps": null,
    "duplex": null,
    "counters": {
      "rx_bytes": 0,
      "tx_bytes": 0,
      "rx_packets": 0,
      "tx_packets": 0,
      "rx_errors": 0,
      "tx_errors": 0,
      "rx_dropped": 0,
      "tx_dropped": 0
    },
    "addresses": [],
    "role": null,
    "role_confidence": null,
    "firewall_in": null,
    "firewall_out": null,
    "firewall_local": null
  }
]
