crates/nm-collect-ubiquiti/tests/snapshots/parsers__lbe-5ac-gen2-wa-8.7.22_ifconfig.snap
---
source: crates/nm-collect-ubiquiti/tests/parsers.rs
assertion_line: 109
expression: "parse::ifconfig::parse(&read(\"ifconfig.txt\")).expect(concat!\n(\"ifconfig\", \" must parse\"))"
---
[
  {
    "name": "airview1",
    "mac": "02:00:00:00:00:03",
    "description": null,
    "admin_up": true,
    "oper_up": true,
    "speed_mbps": null,
    "duplex": null,
    "counters": null,
    "addresses": [],
    "role": null,
    "role_confidence": null,
    "firewall_in": null,
    "firewall_out": null,
    "firewall_local": null
  },
  {
    "name": "ath0",
    "mac": "02:00:00:00:00:01",
    "description": null,
    "admin_up": true,
    "oper_up": true,
    "speed_mbps": null,
    "duplex": null,
    "counters": null,
    "addresses": [],
    "role": null,
    "role_confidence": null,
    "firewall_in": null,
    "firewall_out": null,
    "firewall_local": null
  },
  {
    "name": "br0",
    "mac": "02:00:00:00:00:01",
    "description": null,
    "admin_up": true,
    "oper_up": true,
    "speed_mbps": null,
    "duplex": null,
    "counters": null,
    "addresses": [
      "192.0.2.1"
    ],
    "role": null,
    "role_confidence": null,
    "firewall_in": null,
    "firewall_out": null,
    "firewall_local": null
  },
  {
    "name": "eth0",
    "mac": "02:00:00:00:00:05",
    "description": null,
    "admin_up": true,
    "oper_up": true,
    "speed_mbps": null,
    "duplex": null,
    "counters": null,
    "addresses": [
      "192.0.2.2"
    ],
    "role": null,
    "role_confidence": null,
    "firewall_in": null,
    "firewall_out": null,
    "firewall_local": null
  },
  {
    "name": "lo",
    "mac": null,
    "description": null,
    "admin_up": true,
    "oper_up": true,
    "speed_mbps": null,
    "duplex": null,
    "counters": null,
    "addresses": [
      "127.0.0.1"
    ],
    "role": null,
    "role_confidence": null,
    "firewall_in": null,
    "firewall_out": null,
    "firewall_local": null
  },
  {
    "name": "wifi0",
    "mac": "02:00:00:00:00:01",
    "description": null,
    "admin_up": true,
    "oper_up": true,
    "speed_mbps": null,
    "duplex": null,
    "counters": null,
    "addresses": [],
    "role": null,
    "role_confidence": null,
    "firewall_in": null,
    "firewall_out": null,
    "firewall_local": null
  },
  {
    "name": "wifi1",
    "mac": "02:00:00:00:00:03",
    "description": null,
    "admin_up": true,
    "oper_up": true,
    "speed_mbps": null,
    "duplex": null,
    "counters": null,
    "addresses": [],
    "role": null,
    "role_confidence": null,
    "firewall_in": null,
    "firewall_out": null,
    "firewall_local": null
  }
]
